feature list page accordian

--- a/feature_def.html
+++ b/feature_def.html
@@ -203,6 +203,25 @@
 	.always(function() {
 		console.log( "complete" );
 	});
+	
+	featureJSON.complete(function() {
+		console.log( "second complete - populating accordian" );
+		
+		document.getElementById("jFeature").innerHTML = features[1]; 
+		document.getElementById("jDesc").innerHTML = descriptions[1]; 
+		// for(var i = 0; i < features.length; i++) {
+		//     var opt = features[i];
+		//     var el = document.createElement("option");
+		//     el.textContent = opt;
+		//     el.value = opt;
+		//     select.appendChild(el);
+		// }
+		
+	 	// document.getElementById("jfeatures").innerHTML=features; 						 
+	
+	});
+	
+	
 
 	// -----------------------------
 
@@ -295,16 +314,18 @@
 		  <div class="well">
 			  Under construction
 		  </div>
+		  
+		  
 		  <div class="accordion" id="accordion1">
 			  <div class="accordion-group">
 				  <div class="accordion-heading">
 					  <a class="accordion-toggle" data-toggle="collapse"
 					  data-parent="#accordion1" href="#collapse1">
-					  <script>document.write(featureName);</script></a>
+					  <span id="jFeature"></span></a>
 				  </div>
 				  <div id="collapse1" class="accordion-body collapse">
 					  <div class="accordion-inner">
-						  Over 100 features taken straight from the html pages of your domain (related to structure and content), approximately 20 calculated (or premium) features (such as ratios of one feature to another) and 5-10 advanced features which analyse backlinks and their effect on the onsite.
+						  <span id="jDesc"></span>
 					  </div>
 				  </div>
 			  </div>
