feature list page table and links tidy up

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -399,7 +399,7 @@ rel="stylesheet" type="text/css">
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
 				<li class="active"><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
-				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
+				<li><a href="/feature_def.html">Features</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -443,27 +443,27 @@ rel="stylesheet" type="text/css">
 	  <div class="panel panel-default">
 		  <div class="panel-heading"></div>
 		  <div class="panel-body">
-
+			  <!-- Table -->
+			  <table class="table">
+				  <thead>
+					  <tr>
+						  <th>Feature name</th>
+						  <th># winning URLs</th>
+						  <th>Feature winning mean</th>
+						  <th>Avg domain feature value</th>
+					  </tr>
+				  </thead>
+				  <tbody>
+					  <tr>
+						  <td><script>document.write(featureName);</script></td>
+						  <td>12</td>
+						  <td>34.2</td>
+						  <td>12.6</td>
+					  </tr>
+				  </tbody>
+			  </table>
 		  </div>
-		  <!-- Table -->
-		  <table class="table">
-			  <thead>
-				  <tr>
-					  <th>Feature name</th>
-					  <th># winning URLs</th>
-					  <th>Feature winning mean</th>
-					  <th>Avg domain feature value</th>
-				  </tr>
-			  </thead>
-			  <tbody>
-				  <tr>
-					  <td><script>document.write(featureName);</script></td>
-					  <td>12</td>
-					  <td>34.2</td>
-					  <td>12.6</td>
-				  </tr>
-			  </tbody>
-		  </table>
+		  
 	  </div>
 	  
 	  <br>
