--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -297,7 +297,7 @@
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
 				<li class="active"><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
-				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
+				<li><a href="/feature_def.html">Features</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
