--- a/feature_def.html
+++ b/feature_def.html
@@ -11,7 +11,7 @@
 	
 	<!-- for toggle switch -->
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8;" />
-	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
+	<!-- <link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" /> -->
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
@@ -31,8 +31,7 @@
 	
 	<!-- for toggle switch -->
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>  
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/bootstrap-switch.min.js"></script>    
+
 
 	<!-- for datatables' styling etc -->
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
@@ -287,11 +286,11 @@
           <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
-                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
+				<li><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
-				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
+				<li class="active"><a href="/feature_def.html">Features</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -313,9 +312,7 @@
 
 		  <hr>
 
-		  <div class="well">
-			  Under construction
-		  </div>
+		  <br>
 
 		  <!-- Table -->
 		  <table class="table" id="featTable">
@@ -327,8 +324,8 @@
 			  </thead>
 			  <tbody id="featTableBody">
 				  <tr>
-					  <td>-----------</td>
-					  <td>-----------</td>
+					  <td></td>
+					  <td></td>
 				  </tr>
 			  </tbody>
 		  </table>
