feature list page table and links tidy up

--- a/feature_def.html
+++ b/feature_def.html
@@ -314,22 +314,26 @@
 
 		  <br>
 
-		  <!-- Table -->
-		  <table class="table" id="featTable">
-			  <thead>
-				  <tr>
-					  <th>Feature name</th>
-					  <th>Description</th>
-				  </tr>
-			  </thead>
-			  <tbody id="featTableBody">
-				  <tr>
-					  <td></td>
-					  <td></td>
-				  </tr>
-			  </tbody>
-		  </table>
+		  <div class="row-fluid">
+			  <div class="span4">
 
+				  <!-- Table -->
+				  <table class="table" class="table table-striped" id="featTable">
+					  <thead>
+						  <tr>
+							  <th>Feature name</th>
+							  <th>Description</th>
+						  </tr>
+					  </thead>
+					  <tbody id="featTableBody">
+						  <tr>
+							  <td></td>
+							  <td></td>
+						  </tr>
+					  </tbody>
+				  </table>
+			  </div>
+		  </div>
 
 
 		  <!-- <div class="accordion" id="accordionFeat">
