feature list page table and links tidy up

--- a/feature_def.html
+++ b/feature_def.html
@@ -300,7 +300,7 @@
     <!-- We use row-fluid inside containers to achieve a resizable layout. -->
     <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
     <!-- http://stackoverflow.com/a/12270322 -->
-    <div class="container-fluid" id="header">
+    <div class="container">
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
       <!-- www.google.com/fonts/specimen/Ubuntu -->
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
@@ -314,8 +314,9 @@
 
 		  <br>
 
-		  <div class="row-fluid">
-			  <div class="span4">
+		  <div class="panel panel-default">
+			  <div class="panel-heading"></div>
+			  <div class="panel-body">
 
 				  <!-- Table -->
 				  <table class="table" class="table table-striped" id="featTable">
