--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -102,52 +102,52 @@
 	
 	// -----------------------------
 	
-	var features = [];
-	var descriptions = [];
-	
-	var featureJSON = $.getJSON( "json/features/feature_list.json", function(results) {
-		console.log( "JSON loading success" );
-		$.each(results, function(index) {
-			// alert(results[index].name);
-
-				blob = results[index].name;
-				blobDesc = results[index].description;
-				$.each(blob, function(nameIndex) {
-					features.push(blob[nameIndex]);
-					descriptions.push(blobDesc[nameIndex]);
-				});
-
-		});
-	})
-	.done(function() {
-		console.log( "second success" );
-	})
-	.fail(function() {
-		console.log( "error" );
-	})
-	.always(function() {
-		console.log( "complete" );
-	});
-	
-	featureJSON.complete(function() {
-		console.log( "second complete - populating feature table" );
-		
-		var table = document.getElementById("featTableBody"); 
-
-		for(var i = 0; i < features.length; i++) {
-			
-			var tr = document.createElement("tr");
-			var tdFeat = tr.appendChild(document.createElement("td"));
-			var tdDesc = tr.appendChild(document.createElement("td"));
-			tdFeat.innerHTML = features[i]
-			tdDesc.innerHTML = descriptions[i];
-			table.appendChild(tr);
-		}
-		
-	 	// document.getElementById("jfeatures").innerHTML=features; 						 
-	
-	});
-	
+	// var features = [];
+	// var descriptions = [];
+	// 
+	// var featureJSON = $.getJSON( "json/features/feature_list.json", function(results) {
+	// 	console.log( "JSON loading success" );
+	// 	$.each(results, function(index) {
+	// 		// alert(results[index].name);
+	// 
+	// 			blob = results[index].name;
+	// 			blobDesc = results[index].description;
+	// 			$.each(blob, function(nameIndex) {
+	// 				features.push(blob[nameIndex]);
+	// 				descriptions.push(blobDesc[nameIndex]);
+	// 			});
+	// 
+	// 	});
+	// })
+	// .done(function() {
+	// 	console.log( "second success" );
+	// })
+	// .fail(function() {
+	// 	console.log( "error" );
+	// })
+	// .always(function() {
+	// 	console.log( "complete" );
+	// });
+	// 
+	// featureJSON.complete(function() {
+	// 	console.log( "second complete - populating feature table" );
+	// 	
+	// 	var table = document.getElementById("featTableBody"); 
+	// 
+	// 	for(var i = 0; i < features.length; i++) {
+	// 		
+	// 		var tr = document.createElement("tr");
+	// 		var tdFeat = tr.appendChild(document.createElement("td"));
+	// 		var tdDesc = tr.appendChild(document.createElement("td"));
+	// 		tdFeat.innerHTML = features[i]
+	// 		tdDesc.innerHTML = descriptions[i];
+	// 		table.appendChild(tr);
+	// 	}
+	// 	
+	//  	// document.getElementById("jfeatures").innerHTML=features; 						 
+	// 
+	// });
+	// 
 	
 
 	// -----------------------------
