--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -396,7 +396,7 @@ d3.json(topLevelFile, function(data) {
 		.datum(data)
 		.call(chart);
 
-		chart.state().disabled[1] = new Boolean(1);
+		
 
 		nv.utils.windowResize(chart.update);
 		
@@ -407,8 +407,11 @@ d3.json(topLevelFile, function(data) {
 	});
 });
 
+var state = chart.state();
+state.disabled[1] = new Boolean(1);
 
-
+chart.dispatch.changeState(state);
+chart.update();
 
 
 
@@ -433,11 +436,14 @@ redrawGraph = function(file) {
 	.datum(data)
 	.call(chart);
 	
-	chart.state().disabled[1] = True;
 	
     nv.utils.windowResize(chart.update);
 	
   });
+
+  chart.dispatch.changeState(state);
+  chart.update();
+    
 };
 
 </script>
