--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -375,7 +375,7 @@ initDataTables();
 
 		var chart;
 
-d3.json(topLevelFile, function(data) {
+var chartDone = d3.json(topLevelFile, function(data) {
 
 	nv.addGraph(function() {
 		chart = nv.models.multiBarHorizontalChart()
@@ -407,11 +407,15 @@ d3.json(topLevelFile, function(data) {
 	});
 });
 
-var state = chart.state();
-state.disabled[1] = new Boolean(1);
+chartDone.complete(function() {
 
-chart.dispatch.changeState(state);
-chart.update();
+	var state = chart.state();
+	state.disabled[1] = new Boolean(1);
+
+	chart.dispatch.changeState(state);
+	chart.update();
+
+});
 
 
 
@@ -441,8 +445,6 @@ redrawGraph = function(file) {
 	
   });
 
-  chart.dispatch.changeState(state);
-  chart.update();
     
 };
 
