--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -353,11 +353,7 @@ dataTableTwo = $('#example3b').dataTable( {
 $(document).ready(function(){
 initDataTables();
 /* all other page load code*/
-var state = chart.state();
-state.disabled[1] = new Boolean(1);
 
-chart.dispatch.changeState(state);
-chart.update();
 
 });
 	
@@ -378,12 +374,12 @@ chart.update();
 
 
 
-		var chart;
+
 
 d3.json(topLevelFile, function(data) {
 
 	nv.addGraph(function() {
-		chart = nv.models.multiBarHorizontalChart()
+		var chart = nv.models.multiBarHorizontalChart()
 		.x(function(d) { return d.label })
 		.y(function(d) { return d.value })
 		.margin({top: 30, right: 100, bottom: 50, left: 100})
@@ -401,15 +397,18 @@ d3.json(topLevelFile, function(data) {
 		.datum(data)
 		.call(chart);
 
-		
-
 		nv.utils.windowResize(chart.update);
-		
-		
+
 		chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
 		
 		return chart;
 	});
+	var state = chart.state();
+	state.disabled[1] = new Boolean(1);
+
+	chart.dispatch.changeState(state);
+	chart.update();
+	
 });
 
 
