--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -393,7 +393,8 @@ d3.json(topLevelFile, function(data) {
 		chart.yAxis
 		.tickFormat(d3.format(',.2f'));
 		
-		chart.state.disabled[1] = new Boolean(1);
+		var state = chart.state();
+		state.disabled[1] = new Boolean(1);
 
 		d3.select('#chart1 svg')
 		.datum(data)
