neutral disabled on horiz bar - fail

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -321,7 +321,7 @@ rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="dist/jquery.jqplot.min.css" />
 <style type="text/css" title="currentStyle">
 @import "datatables/media/css/demo_page.css"; 
-@import "datatables/media/css/header.ccss";
+/*@import "datatables/media/css/header.ccss";*/
 @import "datatables/media/css/demo_table.css";
 /* for re-styling and CSV export */
 @import "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css";
