loading in summary JSON

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -93,11 +93,11 @@
 	
 	if (onOrOffsite.length < 7) {
 		JSONfilename = "XDrill";
-		highlightFilename = "json/summary/"+websiteName+"_Xhat";
+		highlightFilename = "json/summary/"+websiteName+"_Xhat.json";
 	}
 	else {
 		JSONfilename = "XDrillOff";
-		highlightFilename = "json/summary/"+websiteName+"_XhatOff";
+		highlightFilename = "json/summary/"+websiteName+"_XhatOff.json";
 	}
 	
 	// -----------------------------
