loading in summary JSON

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -102,8 +102,11 @@
 	
 	// -----------------------------
 	
+	var featDescs = [];
+	var loseMeans = [];
 	var winMeans = [];
-	var winStdevs = [];
+	var harmMeans = [];
+	var healthMeans = [];
 	
 	var featureJSON = $.getJSON( highlightFilename, function(results) {
 		console.log( "JSON loading success" );
