loading in summary JSON

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -117,7 +117,7 @@
 			// blobDesc = results[index].description;
 			$.each(blob, function(nameIndex) {
 				blobInner = blob[nameIndex];
-				if (blobInner[1]==featureName.lower()) {
+				if (blobInner[1]==featureName) {
 					
 					alert(featureName);
 					loseMean.push(blobInner[2]);
