loading in summary JSON

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -116,7 +116,7 @@
 			blob = results.onsite[index];
 			// blobDesc = results[index].description;
 
-			alert(blob[1])
+			console.log(blob[1]);
 				
 			// if (blob[1]==featureName) {
 			// 		
