loading in summary JSON

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -116,17 +116,18 @@
 			blob = results.onsite[index];
 			// blobDesc = results[index].description;
 
-			console.log(blob[1]);
+			console.log(featureName);
 				
-			// if (blob[1]==featureName) {
+			if (blob[1]==featureName) {
 			// 		
-			// 	alert(featureName);
+				console.log(featureName);
+				console.log(blob[1]);
 			// 	loseMean.push(blob[2]);
 			// 	winMean.push(blob[3]);
 			// 	harmMean.push(blob[5]);
 			// 	healthMean.push(blob[8]);
 			// 
-			// });
+		});
 	
 		});
 	})
