--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -259,9 +259,9 @@ initDataTables();
 // 	];
 // }
 
-var mu = winMean;
+var mu = float(winMean);
 var sd = 1.8;
-var mu2 = loseMean;
+var mu2 = float(loseMean);
 var sd2 = 0.8;
 
 ixMin = Math.round(Math.min(mu-3*sd,mu2-3*sd2));
