Added table live values

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -510,7 +510,7 @@ rel="stylesheet" type="text/css">
 						  <th>Feature name</th>
 						  <th>
 							  <script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write('# losing URLs');
 							  }
 							  else {
@@ -520,7 +520,7 @@ rel="stylesheet" type="text/css">
 						  </th>
 						  <th>
 							  <script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write('Feature losing mean');
 							  }
 							  else {
@@ -531,7 +531,7 @@ rel="stylesheet" type="text/css">
 						  </th>
 						  <th>
 							  <script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write('Avg domain feature value (harmful URLs)');
 							  }
 							  else {
@@ -550,7 +550,7 @@ rel="stylesheet" type="text/css">
 						  </td>
 						  <td>
 							  <script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write(numLose);
 							  }
 							  else {
@@ -560,7 +560,7 @@ rel="stylesheet" type="text/css">
 						  </td>
 						  <td>
 							  <script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write(loseMean);
 							  }
 							  else {
@@ -569,7 +569,7 @@ rel="stylesheet" type="text/css">
 							  </script>
 						  </td>
 						  <td><script>
-							  if healthOrHarm == 'harmful'{
+							  if (healthOrHarm == 'harmful'){
 								  document.write(harmMean);
 							  }
 							  else {
