--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -178,7 +178,7 @@
 	var features = [];
 
 	var featureJSON = $.getJSON( "json/features/feature_list.json", function(results) {
-		console.log( "JSON loading success" );
+		console.log( "feature JSON loading success" );
 		$.each(results, function(index) {
 			// alert(results[index].name);
 			blob = results[index].name;
@@ -200,7 +200,7 @@
 	
 
 	featureJSON.complete(function() {
-		console.log( "second complete - populating dropdown" );
+		console.log( "second complete - populating feature dropdown" );
 		
 		var select = document.getElementById("selectFeat"); 
 		
@@ -216,6 +216,50 @@
 	
 	});
 
+
+	// ------------------------------
+	
+	var websites = [];
+
+	var websiteJSON = $.getJSON( "json/websites/websiteList.json", function(results) {
+		console.log( "website JSON loading success" );
+		$.each(results, function(index) {
+			// alert(results[index].name);
+			websites.push = results[index].url;
+
+		});
+	})
+	.done(function() {
+		console.log( "second success" );
+	})
+	.fail(function() {
+		console.log( "error" );
+	})
+	.always(function() {
+		console.log( "complete" );
+	});
+	
+
+	websiteJSON.complete(function() {
+		console.log( "second complete - populating website dropdown" );
+		
+		var select = document.getElementById("selectSite"); 
+		
+		for(var i = 0; i < websites.length; i++) {
+		    var opt = websites[i];
+		    var el = document.createElement("option");
+		    el.textContent = opt;
+		    el.value = opt;
+		    select.appendChild(el);
+		}
+		
+	 	// document.getElementById("jfeatures").innerHTML=features; 						 
+	
+	});
+	
+	
+	
+	// ------------------------------
 
 	jQuery(document).ready(function($) {
 		$(".clickableRow").click(function() {
@@ -323,8 +367,14 @@
 			  Enter Domain URL:
 			  <div class="form-group">
 				  <input type="url" class="form-control" id="inputURL">
+				  <form id="dropdownWebsite">
+					  <select id="selectSite">
+						  <option>Select domain from a list</option>
+						  <option class="divider">-------------------------</option>
+					  </select>
+				  </form>
 			  </div>
-
+			  
 			  <br>
 
 			  <form id="dropdownOnOff">
