--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -223,9 +223,9 @@
 
 	var websiteJSON = $.getJSON( "json/websites/websiteList.json", function(results) {
 		console.log( "website JSON loading success" );
-		$.each(results, function(index) {
+		$.each(results.url, function(index) {
 			// alert(results[index].name);
-			websites.push = results[index].url;
+			websites.push = results.url[index];
 
 		});
 	})
@@ -369,7 +369,7 @@
 				  <input type="url" class="form-control" id="inputURL">
 				  <form id="dropdownWebsite">
 					  <select id="selectSite">
-						  <option>Select domain from a list</option>
+						  <option>or select domain from a list</option>
 						  <option class="divider">-------------------------</option>
 					  </select>
 				  </form>
