Fix for top level graph

--- a/SQ_toplevel.html
+++ b/SQ_toplevel.html
@@ -197,7 +197,7 @@ if (onOrOffsite.length < 7) {
 }
 else {
 	JSONfilename = "XhatOff";
-	topLevelFile = "/json/toplevel/" + websiteName + "_ybarOff.json";
+	topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 }
 
 
